@@ -11,6 +11,9 @@ createExe {
     classpath = [
             "./lib/*"
     ]
+    jvmOptions = [
+            "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    ]
     libraryDir = "null"
     stayAlive = true
     jdkPreference = "jdkOnly"
@@ -45,7 +48,7 @@ task exportWin64(type: Copy, dependsOn: [downloadJDKWin64, createExe, jar, expor
     }
     into('plugins') { from 'build/plugins/' }
     into('license') { with copySpec { from 'license' } }
-    into('jdk') { with copySpec { from 'jdk/jdk11_win_64' } }
+    into('jdk') { with copySpec { from 'jdk/jdk16_win_64' } }
 }
 
 task zipWin64(type: Zip, dependsOn: exportWin64) {
